# vlm-code-context-mcp

./: .gitignore  .linear.local.json.example  .mcp.json  .npmignore  BENCHMARK-GUIDE.md  CHANGELOG.md  CONTRIBUTION_GUIDE.md  GEMMA-VS-OPUS-DEBATE.md  GETTING-STARTED.md  LICENSE  LINKEDIN-POST.md  README.md  STYLEGUIDE.md  _restore.cjs  benchmark-results.json  benchmark-stochastic-results.json  comparison.json  eslint.config.js  package-lock.json  package.json  playwright.config.ts  tsconfig.json
.claude/: settings.json
docs/: .gitignore  ARCHITECTURE.md  LAUNCH.md  api-reference.md  dashboard.md  index.md  package-lock.json  package.json  user-guide.md  ux-design-system.md  ux-user-journey-map.md
e2e/: dashboard-tabs.spec.ts  sprint-phases.spec.ts  sync-buttons.spec.ts
paperclip-macros/: Cargo.toml
paperclip-rs/: Cargo.toml  README.md
paperclip-rs/docs/: GETTING_STARTED.md  MIGRATION.md
paperclip-rs/examples/: basic.rs
paperclip-rs/src/: attachment.rs  error.rs  lib.rs  processors.rs  storage.rs  traits.rs
paperclip-rs/tests/: integration.rs
scripts/: check-commands.mjs  compile-skills.mjs  make-legacy-fixture.mts  measure-tokens.mts  postinstall.js  sync-skills.mjs
skills/: .source.json
src/: dashboard.html  dashboard.ts  index.ts  indexer.ts  schema.ts  setup.ts
test/: agent-model.test.ts  agent-skill-seeding.test.ts  agentless-sprint.test.ts  audit-trail.test.ts  auto-telemetry-close.test.ts  benchmark-stochastic.test.ts  benchmark.test.ts  boot-downgrade-guard.test.ts  bridge.test.ts  cards.test.ts  commit-contract-context.test.ts  (+43 more)
(+359 files in other folders)
